fixes overflow issue after resizing page from narrow back to wide

--- a/app/assets/stylesheets/base/_base.css.scss
+++ b/app/assets/stylesheets/base/_base.css.scss
@@ -72,5 +72,6 @@ header {
 }
 
 div.main-content {
+  overflow: hidden;
   padding: 20px 10px;
 }
